# jiffy

./: CMakeLists.txt  install.sh
cmake-modules/: BuildOptions.cmake  JemallocExternal.cmake  ThriftExternal.cmake
conf/: jiffy.conf
directory/: CMakeLists.txt
example/: CMakeLists.txt  example.cpp  reader.cpp
libjiffy/src/jiffy/directory/block/: random_block_allocator.cpp
libjiffy/src/jiffy/storage/file/: file_ops.cpp  file_ops.h  file_partition.cpp  file_partition.h
libjiffy/src/jiffy/utils/: directory_utils.h
storage/: CMakeLists.txt
storage/src/: storage_server.cpp
